<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity">
    <Button
            android:text="@string/label_btn_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_about"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.499" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.435"/>
    <Button
            android:text="@string/label_btn_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_profile"
            app:layout_constraintTop_toBottomOf="@+id/btn_about" android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/label_tv_main"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>