<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProfileActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ProfileActivity">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp" android:src="@drawable/andela_image"
                android:id="@+id/imageView"
                android:scaleType="fitCenter"
                android:contentDescription="@string/des_profile_image"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0"/>

        <View android:layout_width="match_parent"
              android:background="@android:color/darker_gray"
              android:layout_height="0.9dp"
              android:id="@+id/view"
              app:layout_constraintTop_toBottomOf="@+id/tv_name"/>
        <TextView
                android:text="@string/label_tv_track"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2" android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/view"
                app:layout_constraintEnd_toStartOf="@+id/guideline" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="32dp" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/label_tv_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/label_tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/label_tv_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline"
                android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/label_tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline"
                                                    android:orientation="vertical"
                                                    app:layout_constraintGuide_end="248dp"/>
        <TextView
                tools:text="Android Develop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/tv_track"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/view" android:layout_marginTop="32dp"/>
        <TextView
                tools:text="Ghana"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_country"
                app:layout_constraintTop_toBottomOf="@+id/tv_track"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                tools:text="kelvin@gmail.com"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_email"
                app:layout_constraintTop_toBottomOf="@+id/tv_country"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                tools:text="0555"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_contact"
                app:layout_constraintTop_toBottomOf="@+id/tv_email"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                tools:text="kelvin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_username"
                app:layout_constraintTop_toBottomOf="@+id/tv_contact"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                tools:text="John Doe"
                android:layout_width="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-light"
                android:gravity="center_horizontal"
                android:id="@+id/tv_name" app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.507" android:layout_marginTop="4dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>